# Attacker

./: .env.example  .gitignore  PROJECT_PROPOSAL.md  TECH_STACK.md  main.py  pyproject.toml
app/api/: health.py  tests.py
app/core/: lifespan.py
app/schemas/: attack_sample_schema.py  evidence_schema.py  index_schema.py  judge_schema.py  target_schema.py
app/services/: attack_executor.py  embedding_provider.py  evidence_service.py  judge_engine.py  sample_loader.py  semantic_index_service.py
app/services/target_connector/: http_connector.py
app/storage/: duckdb_store.py  minio_store.py  parquet_store.py  qdrant_store.py
conf/: logging.py  settings.py  storage_conf.py
samples/prompt_injection/: day2_reveal_system_prompt.yaml
steps/: day1.md  day2.md  day3.md  day4.md
